bubba-backend (2.4.0.4) vincent hugo; urgency=low

  * add dependency for compat-wireless

 -- Carl Fürstenberg <carl@excito.com>  Tue, 14 Feb 2012 18:30:37 +0100

bubba-backend (2.4.0.3) vincent hugo; urgency=low

  * Add power cycle request message (Closes: #1895)

 -- Carl Fürstenberg <carl@excito.com>  Mon, 13 Feb 2012 16:47:25 +0100

bubba-backend (2.4.0.2) hugo vincent; urgency=low

  * adding dependency to hddtemp

 -- Carl Fürstenberg <carl@excito.com>  Mon, 06 Feb 2012 14:36:36 +0100

bubba-backend (2.4.0.1) hugo vincent; urgency=medium

  * update minidlna config directly without using Config::Simple (Closes: #1890)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 01 Feb 2012 15:18:31 +0100

bubba-backend (2.4) hugo vincent; urgency=low

  * Bumping for release

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Jan 2012 21:49:11 +0100

bubba-backend (2.4~pre20) hugo vincent; urgency=low

  * input splitted array into the error log
  * We still need to get "errors" as they can include notices

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Jan 2012 21:49:08 +0100

bubba-backend (2.4~pre19) hugo vincent; urgency=low

  * Fix syntax errors in adminfunctions (Closes: #1847)

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Jan 2012 13:00:37 +0100

bubba-backend (2.4~pre18) hugo vincent; urgency=low

  * remove old usage of the "t" function (Closes: #1843)

 -- Carl Fürstenberg <carl@excito.com>  Wed, 18 Jan 2012 13:02:41 +0100

bubba-backend (2.4~pre17) hugo vincent; urgency=low

  * Disable ipv6 in proftpd configuration (Closes: #1792)
  * Remove missing locks that should have been removed before (Closes: #1837)

 -- Carl Fürstenberg <carl@excito.com>  Tue, 17 Jan 2012 15:01:47 +0100

bubba-backend (2.4~pre16) hugo vincent; urgency=low

  * Updating copyright information to fit company policy

 -- Carl Fürstenberg <carl@excito.com>  Tue, 10 Jan 2012 17:01:58 +0100

bubba-backend (2.4~pre15) hugo vincent; urgency=low

  * change to bubba3-kernel
