@@ -1,3 +1,9 @@
+bubba-backend (2.4.0.5) vincent hugo; urgency=low
+
+  * Respecify the ownership of home directories on restore (Closes: #1896)
+
+ -- Carl Fürstenberg <carl@excito.com>  Tue, 21 Feb 2012 18:10:08 +0100
+
 bubba-backend (2.4.0.4) vincent hugo; urgency=low
 
   * add dependency for compat-wireless
